app/docs/reference/3.1/Symfony/Validator/Exception/ValidationException/page.mdx
---
type: Class
---

# [ApiPlatform\Symfony\Validator\Exception\ValidationException](/docs/v3.1/reference/Symfony/Validator/Exception/ValidationException)

Thrown when a validation error occurs.


```php
class ApiPlatform\Symfony\Validator\Exception\ValidationException extends `<a href="/docs/v3.1/reference/Validator/Exception/ValidationException">ApiPlatform\Validator\Exception\ValidationException</a>` implements `<a href="/docs/v3.1/reference/Exception/ExceptionInterface">ApiPlatform\Exception\ExceptionInterface</a>`, Stringable, Throwable, `<a href="/docs/v3.1/reference/Symfony/Validator/Exception/ConstraintViolationListAwareExceptionInterface">ApiPlatform\Symfony\Validator\Exception\ConstraintViolationListAwareExceptionInterface</a>`
{
    public __construct(Symfony\Component\Validator\ConstraintViolationListInterface $constraintViolationList, string $message, int $code, null|Throwable $previous, null|string $errorTitle)
    public getConstraintViolationList(): Symfony\Component\Validator\ConstraintViolationListInterface
    public __toString(): string
    public getErrorTitle(): string
    public __wakeup()
    public getMessage(): string
    public getCode()
    public getFile(): string
    public getLine(): int
    public getTrace(): array
    public getPrevious(): Throwable
    public getTraceAsString(): string
}
```
## Properties
### errorTitle

```php
string $errorTitle
```



### message

```php
$message
```



### code

```php
$code
```



### file

```php
string $file
```



### line

```php
int $line
```



## Methods

### __construct



```php
public __construct(Symfony\Component\Validator\ConstraintViolationListInterface $constraintViolationList, string $message, int $code, null|Throwable $previous, null|string $errorTitle)
```

#### Parameters

<table><tbody>
<tr><td>constraintViolationList</td><td>Symfony\Component\Validator\ConstraintViolationListInterface</td><td></td></tr><tr><td>message</td><td>string</td><td></td></tr><tr><td>code</td><td>int</td><td></td></tr><tr><td>previous</td><td>Throwable</td><td></td></tr><tr><td>errorTitle</td><td>string</td><td></td></tr>
</tbody>
</table>

### getConstraintViolationList



```php
public getConstraintViolationList(): Symfony\Component\Validator\ConstraintViolationListInterface
```

#### Returns

Symfony\Component\Validator\ConstraintViolationListInterface

### __toString



```php
public __toString(): string
```

#### Returns

string
